<resources>
    <string name="app_name" translatable="false">Dynamic Island: Edge Lighting</string>
    <string name="language" translatable="false">Language</string>
    <string name="please_select_language">Please select language</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_request_record_permission">"Bluetooth is the permission required for the app to work"</string>
    <string name="txt_denie">To use this feature, you need permission</string>
    <string name="text_thank_you">Thank you for using</string>
    <string name="text_rate_content">We work super hard to make app better for you,  and would love to know: how would you rate our app</string>
    <string name="text_rate_now">Rate Now</string>
    <string name="txt_thanks_you_for_rating">Thanks you for rating!</string>
    <string name="home">Home</string>
    <string name="modules">Modules</string>
    <string name="configs">Configs</string>
    <string name="dynamic_island" translatable="false">Dynamic Island</string>
    <string name="display_notch">Display Notch</string>
    <string name="notch_style">Notch Style</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="custom">Custom</string>
    <string name="notch_position">Notch Position</string>
    <string name="notch_size">Notch Size</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="vertical">Vertical (Y)</string>
    <string name="horizontal">Horizontal (X)</string>
    <string name="reset_size">Reset Size</string>
    <string name="reset_position">Reset Position</string>
    <string name="txt_music">Music</string>
    <string name="display_listening_music_on_your_notch">Display listening music on your notch</string>
    <string name="notifications">Notifications</string>
    <string name="get_animation_notifications_on_your_notch">Get animation notifications on your notch</string>
    <string name="calls">Calls</string>
    <string name="incoming_calls_directly_on_your_notch">Incoming calls directly on your notch</string>
    <string name="navigation">Navigation</string>
    <string name="navigation_helper_with_google_map">Navigation helper with google map</string>
    <string name="headset">Headset</string>
    <string name="battery_Charge">Battery Charge</string>
    <string name="ringing_state">Ringing State</string>
    <string name="headset_connect_animation">Headset connect animation</string>
    <string name="battery_charging_animation">Battery charging animation</string>
    <string name="ringing_state_change_animation">Ringing state change animation</string>
    <string name="keep_notch_visible">Keep Notch Visible</string>
    <string name="when_nothing_to_show">When nothing to show</string>
    <string name="auto_adjust_notch">Auto Adjust Notch</string>
    <string name="force_your_notch_to_be_centered_in_split_mode">Force your notch to be centered in split mode</string>
    <string name="hide_in_landscape_mode">Hide in Landscape Mode</string>
    <string name="notification_animation">Notification Animation</string>
    <string name="neon_color">Neon Color</string>
    <string name="notch_click_code">Notch Click Mode</string>
    <string name="vibration">Vibration</string>
    <string name="clock">Clock</string>
    <string name="brightness_mode">Brightness</string>
    <string name="quick_settings_ui_mode_night_label">Dark mode,Dark theme</string>
    <string name="data_saver">Data Saver</string>
    <string name="quick_settings_rotation_unlocked_label">Auto-rotate</string>
    <string name="open_system_shade">Open system shade</string>
    <string name="enable_location">Enable Location</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_dnd_none_label">Total silence</string>
    <string name="quick_settings_dnd_alarms_label">Alarms only</string>
    <string name="quick_settings_dnd_priority_label">Priority only</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="quick_settings_flashlight_label">Flashlight</string>
    <string name="camera">Camera</string>
    <string name="switch_sim">Switch data SIM</string>
    <string name="screen_time">Screen time</string>
    <string name="screen_time_no_permission">No permission</string>
    <string name="screenshot">Screenshot</string>
    <string name="screen_record_name">Screen Recording</string>
    <string name="quick_settings_night_display_label">Night Light</string>
    <string name="quick_settings_nfc_label">NFC</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="quick_settings_location_label">Location</string>
    <string name="keyboard_picker">Keyboard Picker</string>
    <string name="quick_settings_tiles_default">wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,brightness,hotspot,saver,cast,dark,night,ringer,nfc,stock,sim</string>
    <string name="bluetooth_permission">Bluetooth Permission not granted!</string>
    <string name="backgroundImageName">computer_bg_image</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpaper updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpaper</string>
    <string name="test_text">New email Good long text is good to go here is the thing to test with it</string>
    <string name="silent_txt">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="airpods">Airpods</string>
    <string name="percent">%%</string>
    <string name="charging_txt">Charging</string>
    <string name="full_txt">Full</string>
    <string name="reply">Reply</string>
    <string name="quick_settings_tiles_more">,ss,rec,sync,screen,timeout,lock,clock,camera,keyboard</string>
    <string name="accessibility">Accessibility</string>
    <string name="disclosure">Disclosure</string>
    <string name="notification_access">Notification Access</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="used_to_display_the_notch_over_other_apps">This app needs to be activated in Accessibility to set up and display the Dynamic Island on the top of the screen for notifications.. No data is collected or shared using the Accessibility Service</string>
    <string name="used_to_forward_listening_music_and_notifications_to_the_notch">You need to grant notification permission to display and manipulate notifications on Dynamic Island </string>
    <string name="disable_battery_optimization_if_your_notch_disappear_automatically_after_some_times">Disable battery optimization if your notch disappear automatically after some times</string>
    <string name="the_app_uses_the_accessibility_service_to_display_the_notch_view">The app uses the AccessibilityService to display the notch view</string>
    <string name="no_data_is_collected_or_shared_using_the_accessibility_service_api">No data is collected or shared using the AccessibilityService API</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="accessibility_desc">This service allows the use of overlay window on top of the screen for notifications. \n\nNo data is stored on the device or sent over the internet.</string>
    <string name="always">Always</string>
    <string name="neon">Neon</string>
    <string name="normal_click">Normal Click</string>
    <string name="txt_bluetooth_connect">Bluetooth Connect</string>
    <string name="used_to_display_all_the_devices_connected_through_bluetooth_on_the_notch">Used to display all the devices connected through Bluetooth on the notch</string>
    <string name="txt_turn_on">Turn On</string>
    <string name="txt_rotate_cover">Rotate Cover</string>
    <string name="txt_display_app_notifications_amp_make_actions_by_your_notch"><![CDATA[Display app notifications & make actions by your notch]]></string>
    <string name="txt_show_action">Show action</string>
    <string name="txt_app">App</string>
    <string name="txt_icon">Icon</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_show_incoming_calls_directly_on_your_notch">Show incoming calls directly on your notch</string>
    <string name="txt_display_a_timer_when_in_call">Display a timer when in call</string>
    <string name="txt_hide_default_call_app_notification_may_not_work_on_some_devices">Hide default call app notification (may not work on some devices)</string>
    <string name="txt_calls">Calls</string>
    <string name="txt_display_navigation_directions_in_your_notch_when_using_google_map_navigation">Display navigation directions in your notch when using google map navigation</string>
    <string name="txt_navigation">Navigation</string>
    <string name="txt_headset_connect_animation">Headset connect animation</string>
    <string name="txt_headset">Headset</string>
    <string name="txt_display_a_battery_charging_animation_when_plugged">Display a battery charging animation when plugged</string>
    <string name="txt_battery_charge">Battery Charge</string>
    <string name="txt_display_ringing_mode_change_on_your_notch">Display ringing mode change on your notch</string>
    <string name="txt_ringing_state">Ringing State</string>
    <string name="visibility">Visibility</string>
    <string name="seconds_3">3 Seconds</string>
    <string name="seconds_10">10 Seconds</string>
    <string name="seconds_30">30 Seconds</string>
    <string name="minute_1">1 Minute</string>
    <string name="minute_5">5 Minute</string>
    <string name="minute_10">10 Minute</string>
    <string name="ok">Ok</string>
    <string name="animation">Animation</string>
    <string name="shake">Shake</string>
    <string name="click_mode">Click Mode</string>
    <string name="long_click">Long Click</string>
    <string name="normal_click_to_preview_the_notch_content">#Normal click to preview the notch content</string>
    <string name="normal_click_to_hide_the_notch_content_preview">#Normal click to hide the notch content preview</string>
    <string name="long_click_to_open_app">#Long click to open app</string>
    <string name="long_click_to_preview_the_notch_content">#Long click to preview the notch content</string>
    <string name="long_click_to_hide_the_notch_content_preview">#Long click to hide the notch content preview</string>
    <string name="normal_click_to_open_app">#Normal click to open app</string>
    <string name="txt_select_apps">Select Apps</string>
    <string name="txt_all">All</string>
    <string name="swipe_button_to_unlock_notch">Swipe button to unlock notch</string>
    <string name="done">Done!</string>
    <string name="you_can_change_the_style">You can change the style, adjust the size and position of the notch as you need</string>
    <string name="txt_incoming_call">Incoming Call</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="permissions_required_details">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_rate_us">Rate us</string>
    <string name="txt_share_app">Share App</string>
    <string name="txt_language">Language</string>
    <string name="txt_more_app">More App</string>
    <string name="txt_do_you_want_to_quit_the_app">Do you want to quit app?</string>
    <string name="txt_quit">Quit</string>
</resources>