<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_disclosure"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_permission_required"
            style="@style/TextViewSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_permission_required_active"
            style="@style/TextViewMediumActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/permissions_required_details"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_required" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            style="@style/TextViewMediumInActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toStartOf="@id/tv_go_to_settings"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_required_active" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_go_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_settings"
            app:layout_constraintTop_toTopOf="@id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14dp"
            android:textColor="@color/color_9682FF"
            android:fontFamily="@font/fira_sans_medium"
            app:layout_constraintStart_toEndOf="@id/tv_cancel"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>