<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_disclosure"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_visibility"
            style="@style/TextViewSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/color_777777"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_visibility"
            app:layout_constraintWidth_percent="0.8" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlt_normal_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_normal_click"
                style="@style/TextViewMediumActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_click"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_tick_normal_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:src="@drawable/ic_tick_visibility"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/tv_normal_click"
                app:layout_constraintEnd_toStartOf="@id/tv_normal_click"
                app:layout_constraintTop_toTopOf="@id/tv_normal_click" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_normal_click_1"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/normal_click_to_preview_the_notch_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_normal_click" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_normal_click_2"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/normal_click_to_hide_the_notch_content_preview"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_normal_click_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_normal_click_3"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/long_click_to_open_app"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_normal_click_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_777777"
            app:layout_constraintTop_toBottomOf="@id/rlt_normal_click"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlt_long_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_long_click"
                style="@style/TextViewMediumActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_click"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_tick_long_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:src="@drawable/ic_tick_visibility"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_long_click"
                app:layout_constraintEnd_toStartOf="@id/tv_long_click"
                app:layout_constraintTop_toTopOf="@id/tv_long_click" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_long_click_1"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/long_click_to_preview_the_notch_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_long_click" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_long_click_2"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/long_click_to_hide_the_notch_content_preview"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_long_click_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_long_click_3"
                style="@style/TextViewMediumInActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/normal_click_to_open_app"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_long_click_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>