<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_dialog">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/fira_sans_semibold"
            android:text="@string/txt_do_you_want_to_quit_the_app"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layout_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:fontFamily="@font/fira_sans_semibold"
                android:gravity="center"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/text_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_quit"
                android:fontFamily="@font/fira_sans_semibold"
                android:gravity="center"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/txt_quit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relay_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_actions">

            <FrameLayout
                android:id="@+id/fr_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <include
                    android:id="@+id/layout_shimmer"
                    layout="@layout/ads_shimmer_native_permission" />
            </FrameLayout>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>