<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        tools:context=".ui.component.setting.SettingActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imv_back"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans_medium"
                android:text="@string/txt_settings"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imv_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_tools_bar">

            <LinearLayout
                android:id="@+id/layout_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_setting_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:src="@drawable/ic_ratingbar_star_on" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_regular"
                    android:text="@string/txt_rate_us"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/bg_setting_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:src="@drawable/ic_share" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_regular"
                    android:text="@string/txt_share_app"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/bg_setting_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:src="@drawable/ic_language" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_regular"
                    android:text="@string/txt_language"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_more_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/bg_setting_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:src="@drawable/ic_more_app" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_regular"
                    android:text="@string/txt_more_app"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>